re PR c++/32112 (#'unbound_class_template' not supported by dump_decl#)

/cp
2007-08-17  Paolo Carlini  <pcarlini@suse.de>

	PR c++/32112
	* error.c (dump_decl): Deal with UNBOUND_CLASS_TEMPLATE.
	* cxx-pretty-print.c (pp_cxx_unqualified_id): Likewise.

/testsuite
2007-08-17  Paolo Carlini  <pcarlini@suse.de>

	PR c++/32112
	* g++.dg/template/error26.C: New.

From-SVN: r127596